# DNF-IcedTech

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Cannibal/: CMakeLists.txt  CpjLod.cpp  CpjSeq.cpp  CpjSeq.h  InMain.cpp  MacMain.cpp  MsgMain.cpp  MsgMain.h  VecMain.h
Core/Inc/: Core.h  UnBuild.h  UnFile.h  UnMath.h  UnObjBas.h  UnTemplate.h  UnVcWin32.h
Core/Src/: CMakeLists.txt  DnExec.cpp  UExporter.cpp  UFactory.cpp  UnAnsi.cpp  UnBits.cpp  UnCache.cpp  UnClass.cpp  UnCorSc.cpp  UnCoreNet.cpp  UnLinker.cpp  UnMath.cpp  UnMem.cpp  UnMisc.cpp  UnName.cpp  UnObj.cpp  UnProp.cpp  UnVcWin32.cpp  mail.cpp
D3DDrv/Src/: CMakeLists.txt  Direct3D8.cpp  d3d8types.hpp
DukeEd/: CMakeLists.txt
DukeEd/Inc/: BrowserMesh.h
DukeEd/Src/: Main.cpp
DukeEd/Src/Res/: DukeEd.rc  resource.h
Editor/Src/: CMakeLists.txt  EditorPrivate.h  UnEdCam.cpp  UnEdSrv.cpp
Engine/Classes/: Actor.uc  DukeVoice.uc  GameInfo.uc  LevelInfo.uc
Engine/Inc/: DnMesh.h  DnMeshMD3.h  DnMeshPrivate.h  EngineClasses.h  UnAudio.h  UnCamera.h  xcore.h
Engine/Src/: ADukeVoice.cpp  BoneWarp.cpp  CMakeLists.txt  DnMesh.cpp  DnMeshExport.cpp  DnMeshInstance.cpp  DnMeshMD3.cpp  Rope.cpp  UnEngine.cpp  UnGame.cpp  UnMain.cpp  UnMesh.cpp  UnPawn.cpp  UnPhysic.cpp  UnScrTex.cpp
Fire/Src/: CMakeLists.txt  UnFractal.cpp
IpDrv/Src/: InternetLink.cpp  TcpLink.cpp  TcpNetDriver.cpp  UMasterServerCommandlet.cpp  UUpdateServerCommandlet.cpp  UdpLink.cpp  UnSocket.cpp
Launch/: CMakeLists.txt  Launch.cpp
Maps/: !!e1l2.dnf  !z4l3_1.dnf  Autoplay.dnf
MeshEd/: in_win.cpp
Meshes/Models/c_FX/BrainBlast/: BrainBlast.md3  BrainBlast_0.tga
Meshes/Models/c_FX/Gib_ConcreteA/: Gib_ConcreteA.md3
Meshes/Models/c_FX/Gib_ConcreteB/: Gib_ConcreteB.md3
Meshes/Models/c_FX/Gib_ConcreteC/: Gib_ConcreteC.md3
Meshes/Models/c_FX/Gib_EyeBall/: Gib_EyeBall.md3
Meshes/Models/c_FX/Gib_FleshA/: Gib_FleshA.md3
Meshes/Models/c_FX/Gib_FleshB/: Gib_FleshB.md3
Meshes/Models/c_FX/Gib_FleshC/: Gib_FleshC.md3
Meshes/Models/c_FX/Gib_GenericA/: Gib_GenericA.md3
Meshes/Models/c_FX/Gib_GenericB/: Gib_GenericB.md3
Meshes/Models/c_FX/Gib_GenericC/: Gib_GenericC.md3
Meshes/Models/c_FX/Gib_GlassA/: Gib_GlassA.md3
Meshes/Models/c_FX/Gib_GlassB/: Gib_GlassB.md3
Meshes/Models/c_FX/Gib_GlassC/: Gib_GlassC.md3
Meshes/Models/c_FX/Gib_GlassD/: Gib_GlassD.md3
Meshes/Models/c_FX/Gib_GlassE/: Gib_GlassE.md3
Meshes/Models/c_FX/Gib_HandA/: Gib_HandA.md3
Meshes/Models/c_FX/Gib_Head/: Gib_Head.md3
Meshes/Models/c_FX/Gib_Heavyweptorso/: Gib_Heavyweptorso.md3
Meshes/Models/c_FX/Gib_MetalA/: Gib_MetalA.md3
Meshes/Models/c_FX/Gib_MetalB/: Gib_MetalB.md3
Meshes/Models/c_FX/Gib_MetalC/: Gib_MetalC.md3
Meshes/Models/c_FX/Gib_MetalD/: Gib_MetalD.md3
Meshes/Models/c_FX/Gib_OrganA/: Gib_OrganA.md3
Meshes/Models/c_FX/Gib_TorsoA/: Gib_TorsoA.md3
Meshes/Models/c_FX/Gib_WoodA/: Gib_WoodA.md3
Meshes/Models/c_FX/Gib_WoodB/: Gib_WoodB.md3
Meshes/Models/c_FX/Gib_WoodC/: Gib_WoodC.md3
Meshes/Models/c_FX/RespawnMarkerA/: RespawnMarkerA.md3  RespawnMarkerA_0.tga
Meshes/Models/c_FX/ShrinkBlast/: ShrinkBlast.md3
Meshes/Models/c_FX/SnatcherRubble_Rocks/: SnatcherRubble_Rocks.md3
Meshes/Models/c_FX/WoodSplinters/: WoodSplinters.md3
Meshes/Models/c_FX/efxsphere1/: efxsphere1.md3  efxsphere1_0.tga
Meshes/Models/c_FX/fire_jet/: fire_jet.md3
Meshes/Models/c_FX/fire_jetblue/: fire_jetblue.md3
Meshes/Models/c_FX/firebottom/: firebottom.md3
Meshes/Models/c_FX/firegen1RC/: firegen1RC.md3
Meshes/Models/c_FX/frozen_abdomen/: frozen_abdomen.md3
Meshes/Models/c_FX/frozen_arm/: frozen_arm.md3
Meshes/Models/c_FX/frozen_legs/: frozen_legs.md3
Meshes/Models/characters/BUDDbot/: BuddBot.md5mesh
Meshes/Models/characters/Dam_Guide/: Dam_Guide.md5mesh
Meshes/Models/characters/Duke/: duke.md5mesh
Meshes/Models/characters/EDF1/: EDF1.md5mesh
Meshes/Models/characters/EDF1desert/: EDF1desert.md5mesh
Meshes/Models/characters/EDF2/: EDF2.md5mesh
Meshes/Models/characters/EDF2desert/: EDF2desert.md5mesh
Meshes/Models/characters/EDF3/: EDF3.md5mesh
Meshes/Models/characters/EDF3desert/: EDF3desert.md5mesh
Meshes/Models/characters/EDF4/: EDF4.md5mesh
Meshes/Models/characters/EDF4desert/: EDF4desert.md5mesh
Meshes/Models/characters/EDF5/: EDF5.md5mesh
Meshes/Models/characters/EDF5desert/: EDF5desert.md5mesh
Meshes/Models/characters/EDF6/: EDF6.md5mesh
Meshes/Models/characters/EDF6desert/: EDF6desert.md5mesh
Meshes/Models/characters/EDF_sappergengogles/: EDF_sappergengogles.md5mesh
Meshes/Models/characters/EDF_sappernogoggles/: EDF_sappernogoggles.md5mesh
Meshes/Models/characters/Edf_dog/: EDF_dog.md5mesh
Meshes/Models/characters/Edf_freezer/: EDF_freezer.md5mesh
Meshes/Models/characters/Edf_heavyweps/: EDF_heavyweps.md5mesh
Meshes/Models/characters/Edf_pyro/: EDF_pyro.md5mesh
Meshes/Models/characters/Edf_sapper/: EDF_sapper.md5mesh
Meshes/Models/characters/Edf_sniper/: EDF_sniper.md5mesh
Meshes/Models/characters/NPC_F_civilian1/: NPC_F_civilian1.md5mesh
Meshes/Models/characters/NPC_M_BellyA/: NPC_M_BellyA.md5mesh
Meshes/Models/characters/NPC_M_FatA/: NPC_M_FatA.md5mesh
NullAudio/Src/: CMakeLists.txt  NullAudio.cpp
OpenALAudio/Src/: CMakeLists.txt  UnOpenAL.cpp
Render/Src/: Render.cpp  UnLight.cpp  UnMeshRn.cpp  UnRandom.cpp  UnRender.cpp  UnSoftLn.cpp  UnSpan.cpp  UnSprite.cpp  UnTest.cpp
System/: DukeEd.dxvk-cache  DukeEd.ini  DukeEd.int  DukeForever.dxvk-cache  Editor.u  Engine.u  Fire.u  IPServer.u  System.ini  UBrowser.u  UWeb.u  UWindow.u  U_Fragment.u  U_Generic.u  U_Zone1_Vegas.u  U_Zone2_Dam.u  U_Zone3_Canyon.u  U_Zone4_AFB.u  U_Zone5_Area51.u  U_Zone6_Ship.u  default.ini  defuser.ini.bak  dnAI.u  dnGame.u  dnMaterial.u  dnMountables.u  dnParticles.u  dnWindow.u  tempedit.mac
Textures/: e1l2.Dtx
UCC/Src/: CMakeLists.txt
WinDrv/Inc/: WinDrv.h
WinDrv/Src/: WinClient.cpp  WinDrv.cpp  WinViewport.cpp
Window/Src/: Window.cpp
dnAI/Classes/: Navmesh.uc
dnAI/inc/: dnAIClasses.h
dnAI/src/: dnAIPigCop.cpp
dnGame/Classes/: dnWeapon.uc
dnGame/inc/: dnGameClasses.h
(+102 files in other folders)
